# PiLot

./: .gitignore  EXPERIMENT_README.md  README.md  generate_all_configs.py  generate_config.py  generate_multi_device_configs.py  parse_multi_device_results.py  parse_results.py  plot_multi_device.py  run_all.sh  run_all_local.sh  run_all_multi_device.sh  run_centralized.sh  run_distributed.sh  run_new_device_experiments.sh
FirmWare/: CMakeLists.txt  SHARED_MEMORY_ANALYSIS.md  com.txt  test_distributed.sh
PiLot_Centralized/: CMakeLists.txt  README.md  run.sh
PiLot_Centralized/configs/: config_Cricket_X.json  config_ECG5000.json  config_FaceAll.json  model_config.json
PiLot_Centralized/include/: config_types.h  logging.h  nn_types.h
PiLot_Centralized/src/: augmentation.c  logging.c  main.c
PiLot_Centralized/src/config/: config_loader.c
PiLot_Centralized/src/data/: tensor.c  ucr_loader.c
PiLot_Centralized/src/nn/: activations.c  conv1d.c  fully_connected.c  optimizers.c  pooling.c
PiLot_Distributed/: CMakeLists.txt  README.md  run.sh  run_generic.sh
PiLot_Distributed/configs/: config_12dev_Cricket_X.json  config_12dev_ECG5000.json  config_12dev_FaceAll.json  config_7dev_Cricket_X.json  config_7dev_ECG5000.json  config_7dev_FaceAll.json  config_9dev_Cricket_X.json  config_9dev_ECG5000.json  config_9dev_FaceAll.json  config_Cricket_X.json  config_ECG5000.json  config_FaceAll.json  model_config.json  model_config_coffee.json  model_config_coffee_2L_N11.json  model_config_coffee_3L_N13.json  model_config_cricket_x.json  model_config_cricket_x_2L_N11.json  model_config_cricket_x_2L_N13.json  model_config_cricket_x_2L_N15.json  model_config_cricket_x_2L_N7.json  model_config_cricket_x_2L_N9.json  model_config_cricket_x_3L_N15.json  model_config_cricket_x_3L_N9.json  model_config_ecg5000_2L_N13.json  model_config_ecg5000_2L_N15.json  model_config_ecg5000_3L_N11.json  model_config_ecg5000_3L_N15.json  model_config_faceall_2L_N11.json  model_config_faceall_3L_N11.json  model_config_nrf52840_realistic.json
PiLot_Distributed/include/: config_types.h  lw_pilot_sim.h  nn_types.h  shared_memory.h
PiLot_Distributed/scripts/: run_v3_1hr.sh  test_distributed.sh
PiLot_Distributed/src/: main.c
PiLot_Distributed/src/comm/: ipc_tensor.c
PiLot_Distributed/src/config/: config_loader.c
PiLot_Distributed/src/data/: ucr_loader.c
PiLot_Distributed/src/devices/: head_feeder.c  tail_classifier.c  worker_conv1.c
PiLot_Distributed/src/nn/: activations.c  conv1d.c  optimizers.c  pooling.c
PiLot_Distributed/src/utils/: logging.c
configs/: model_config_coffee_2L_N13.json  model_config_coffee_2L_N15.json  model_config_coffee_2L_N7.json  (+24 more)
(+94 files in other folders)
